bytemark-client (3.3) UNRELEASED; urgency=low

  ### New Admin Features:
  * `show dependant servers` command for viewing servers on a head, tail or
    storage pool at a given time
  * `show dependant discs` command for viewing discs on a head, tail or
    storage pool at a given time

 -- Hannah Pirie <hannah.pirie@bytemark.co.uk>  Tue, 21 Aug 2018 16:39:43 +0100

bytemark-client (3.2) UNRELEASED; urgency=low

  ### Changes:
  * `show servers` now takes a group instead of an account by default.
    `--account <account>` can be specified to list all servers on an account.
  * `profiles` and `scripting` have been updated to match the 3.0+ updates.

  ### Fixes:
  * `update config --account <account>` no longer fails if a billing account
    cannot be found for the named account (but a Bytemark Cloud account can)
  * `--output-format` is no longer clobbered by `--table-fields`
  * `--output-format=list` now produces a list with no lines between columns,
    nor between the header and the body of the list

 -- telyn <telyn@bytemark.co.uk>  Mon, 14 May 2018 11:31:25 +0100

bytemark-client (3.1) UNRELEASED; urgency=low

  ### Admin changes:
  * `approve server`, `reject server`, `reify disc`, `reap servers` commands
    have all been removed
  * ApproveVMs, RejectVMs, ReifyDisc, ReapVMs methods have all been removed
    from Client interface and bytemarkClient struct.

  ### Fixes:
  * Authentication with a token as a user other than $USER (or the value in
    your config-dir) no longer fails with a messages about being an unexpected
    user.
  * add ip command no longer makes requests to incorrect URL, causing failure

 -- telyn <telyn@bytemark.co.uk>  Tue, 08 May 2018 10:22:23 +0100

bytemark-client (3.0) UNRELEASED; urgency=low

  ### New Features:
  * `assent` command has been added to mark an account as having assented to
    new terms of business.
  * `restart server` (previously `restart`) and `start server` (previously