@@ -6,6 +6,9 @@ bytemark-client (3.3) UNRELEASED; urgency=low
   * `show dependant discs` command for viewing discs on a head, tail or
     storage pool at a given time
 
+  ## Fixes:
+  * The `--recursive` flag is no longer required to delete non-empty groups.
+
  -- Hannah Pirie <hannah.pirie@bytemark.co.uk>  Tue, 21 Aug 2018 16:39:43 +0100
 
 bytemark-client (3.2) UNRELEASED; urgency=low
